--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Docker
 
 on:
   push:
-    branches: [ "master", "main" ]
+    branches: [ "master", "main", "fix/**", "feat/**" ]
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "master", "main" ]
