ci: fix timezone error in container retention policy

--- a/.github/workflows/cleanup-images.yml
+++ b/.github/workflows/cleanup-images.yml
@@ -15,7 +15,7 @@ jobs:
         uses: snok/container-retention-policy@v2
         with:
           image-names: ai-responder
-          cut-off: 14 days ago
+          cut-off: 14 days ago UTC
           account-type: personal
           token: ${{ secrets.GITHUB_TOKEN }}
           untagged-only: true
@@ -24,7 +24,7 @@ jobs:
         uses: snok/container-retention-policy@v2
         with:
           image-names: ai-responder
-          cut-off: 14 days ago
+          cut-off: 14 days ago UTC
           account-type: personal
           token: ${{ secrets.GITHUB_TOKEN }}
           filter-tags: fix-*,feat-*
