--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,8 +2,10 @@ name: Docker
 
 on:
   push:
-    branches: [ "master", "main", "fix/**", "feat/**" ]
+    branches: [ "master", "main", "fix/**", "feat/**", "feature/**" ]
     tags: [ 'v*.*.*' ]
+  pull_request:
+    branches: [ "master", "main" ]
 
 env:
   REGISTRY: ghcr.io
@@ -42,6 +44,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
+            type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
