Fix(messaging): Implement reliable message queue and improve implicit ACK handling
- Added MessageQueue class for non-blocking sends and retries
- Fixed implicit ACK logic to correctly handle 'None' senders (ghost ACKs) while filtering out errors and echoes
- Include specific error messages from AI providers (500/503) in user response
- Added unit tests for new handler logic

--- a/.github/workflows/cleanup-images.yml
+++ b/.github/workflows/cleanup-images.yml
@@ -29,3 +29,15 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           filter-tags: fix-*,feat-*,pr-*
           keep-at-least: 3
+
+      - name: Delete old main branch images
+        uses: snok/container-retention-policy@v2
+        with:
+          image-names: ai-responder
+          cut-off: 30 days ago UTC
+          account-type: personal
+          token: ${{ secrets.GITHUB_TOKEN }}
+          filter-tags: main
+          keep-at-least: 5
+
+
