--- a/.github/workflows/cleanup-images.yml
+++ b/.github/workflows/cleanup-images.yml
@@ -19,7 +19,7 @@ jobs:
           cut-off: 14 days ago UTC
           account-type: personal
           org-name: ${{ github.repository_owner }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           untagged-only: true
 
       - name: Delete old feature branch images
@@ -29,7 +29,7 @@ jobs:
           cut-off: 14 days ago UTC
           account-type: personal
           org-name: ${{ github.repository_owner }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           filter-tags: fix-*,feat-*,pr-*
           keep-at-least: 3
 
@@ -40,7 +40,7 @@ jobs:
           cut-off: 30 days ago UTC
           account-type: personal
           org-name: ${{ github.repository_owner }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           filter-tags: main
           keep-at-least: 5
 
